# tuxedo-rs

./: .gitignore  .release-please-manifest.json  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  release-please-config.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: nix-build.yml  release-please.yml  update.yml
nix/: module.nix  overlay.nix
tailor_api/: CHANGELOG.md  Cargo.toml
tailor_api/src/: color.rs  fan.rs  keyboard.rs  led.rs  lib.rs  profile.rs  util.rs
tailor_api/tests/: tests.rs
tailor_cli/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
tailor_cli/src/: cli.rs  main.rs  profile.rs
tailor_client/: Cargo.toml
tailor_client/src/: error.rs  lib.rs
tailor_client/src/dbus/: backlight.rs  fan.rs  keyboard.rs  led.rs  mod.rs  performance.rs  profiles.rs
tailor_client/tests/: tests.rs
tailor_gui/: .gitlab-ci.yml  Cargo.toml  icons.toml  meson.build  meson_options.txt
tailor_gui/.github/workflows/: ci.yml
tailor_gui/build-aux/: com.github.aaronerhardt.Tailor.Devel.json  com.github.aaronerhardt.Tailor.json  dist-vendor.sh
tailor_gui/data/: com.github.aaronerhardt.Tailor.desktop.in.in  com.github.aaronerhardt.Tailor.gschema.xml.in  com.github.aaronerhardt.Tailor.metainfo.xml.in.in
tailor_gui/data/icons/: meson.build
tailor_gui/data/resources/: icons.gresource.xml  meson.build  resources.gresource.xml  style.css
tailor_gui/po/: POTFILES.in
tailor_gui/src/: app.rs  config.rs.in  main.rs  meson.build  rustfmt.toml  setup.rs  state.rs  tailor_state.rs  templates.rs  util.rs
tailor_gui/src/components/: color_button.rs  fan_edit.rs  fan_list.rs  hardware_info.rs  keyboard_edit.rs  keyboard_list.rs  led_edit.rs  led_list.rs  mod.rs  new_entry.rs  new_profile.rs  profiles.rs
tailor_gui/src/components/factories/: color.rs  fan_point.rs  list_item.rs  mod.rs  profile.rs  profile_item_fan.rs  profile_item_led.rs
tailor_gui/src/modals/: about.rs  mod.rs
tailor_hwcaps/: CHANGELOG.md  Cargo.toml
tailor_hwcaps/src/: main.rs
tailord/: CHANGELOG.md  Cargo.toml  com.tux.Tailor.conf  meson.build  meson_options.txt  post_install.sh  rpm-dist.sh  tailord.service.in  tailord.spec
tailord/default_configs/fan/: default.json
tailord/default_configs/keyboard/: default.json
tailord/default_configs/profiles/: default.json
tailord/src/: backlight.rs  main.rs  meson.build  performance.rs  power_supply.rs  profiles.rs  shutdown.rs  suspend.rs  util.rs
tailord/src/dbus/: backlight.rs  fan.rs  keyboard.rs  led.rs  mod.rs  performance.rs  profiles.rs
tailord/src/fancontrol/: buffer.rs  mod.rs  profile.rs  runtime.rs
tailord/src/keyboard/: dbus.rs  mod.rs  runtime.rs
tailord/src/led/: mod.rs  runtime.rs
tailord/src/profiles/: fs_util.rs  mod.rs  runtime.rs  util.rs
tuxedo_fancontrol/: Cargo.toml  config.toml
tuxedo_fancontrol/src/: config.rs  fan.rs  main.rs
tuxedo_ioctl/: CHANGELOG.md  Cargo.toml
tuxedo_ioctl/src/: config.rs  error.rs  high_level.rs  lib.rs  main.rs  read.rs  write.rs
tuxedo_ioctl/src/hal/: clevo.rs  mod.rs  traits.rs  uniwill.rs
tuxedo_sysfs/: CHANGELOG.md  Cargo.toml
tuxedo_sysfs/src/: backlight.rs  cpu.rs  keyboard.rs  lib.rs  macros.rs  sysfs_util.rs
tuxedo_sysfs/src/charging/: charge_control.rs  charging_priority.rs  charging_profile.rs  mod.rs
tuxedo_sysfs/src/led/: collection.rs  controller.rs  mod.rs
