[workspace]
resolver = "2"
members = [
    "tuxedo_ioctl",
    "tuxedo_sysfs",
    "tailord",
    "tailor_api",
    "tailor_client",
    "tailor_cli",
    "tailor_hwcaps",
]

exclude = [
    "tailor_gui",
]

[workspace.package]
name = "tuxedo-rs"
version = "0.2.5"
rust-version = "1.70.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
license = "GPL-2.0+"
repository = "https://github.com/AaronErhardt/tuxedo-rs"
