[package]
name = "tailor_api"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.1.1"
edition = "2021"
license = "GPL-2.0+"
description = "API types for communication with tailord (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
atoi = "2"
serde = { version = "1", features = ["derive"] }
