[package]
name = "tailor_api"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.2.1"
edition = "2021"
license = "GPL-2.0+"
description = "API types for communication with tailord (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
atoi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tailor_api = { version = "0.2.1", path = ".", features = ["test-utilities"] }

[features]
test-utilities = ["serde_json"]
