[package]
name = "tailor_api"
description = "API types for communication with tailord (part of tuxedo-rs)"
version = "0.2.6"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atoi = "2"
serde = { version = "1", features = ["derive"] }
