[package]
name = "tailor"
description = "Tailor CLI (part of tuxedo-rs)"
authors = [
  "Aaron Erhardt <aaron.erhardt@t-online.de>",
  "Marc Jakobi <mrcjkb89@outlook.com>"
]
publish = false
version = "0.3.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tailor_api = {version = "0.2.4", path = "../tailor_api" }
tailor_client = {version = "0.2.4", path = "../tailor_client" }
clap = { version = "4.2.4", features = ["derive"] }
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
colored = "2.0.0"
eyre = "0.6.8"
notify-rust = "4.8.0"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"
