[package]
name = "tailor"
description = "Tailor CLI (part of tuxedo-rs)"
authors = [
  "Aaron Erhardt <aaron.erhardt@t-online.de>",
  "Marc Jakobi <mrcjkb89@outlook.com>"
]
publish = false
version = "0.3.2"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tailor_api = {version = "0.2.6", path = "../tailor_api" }
tailor_client = {version = "0.2.7", path = "../tailor_client" }
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
colored = "2.1.0"
eyre = "0.6.12"
notify-rust = "4.11.3"

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
clap_mangen = "0.2.19"
