[package]
name = "tailor_client"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.1.7"
edition = "2021"
license = "GPL-2.0+"
description = "Client library for tailord (part of tuxedo-rs)"

repository = "https://github.com/AaronErhardt/tuxedo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "3", default-features = false, features = ["tokio"] }
serde_json = "1"

tailor_api = { version = "0.1", path = "../tailor_api" }
thiserror = "1.0.34"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
