[package]
name = "tailor_client"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.2.0"
edition = "2021"
license = "GPL-2.0+"
description = "Client library for tailord (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
thiserror = "1"
serde_json = "1"
zbus = { version = "3", default-features = false, features = ["tokio"] }

tailor_api = {version = "0.2", path = "../tailor_api" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
