[package]
name = "tailor_client"
description = "Client library for tailord (part of tuxedo-rs)"
version = "0.2.7"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }

tailor_api = {version = "0.2.6", path = "../tailor_api" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
