[package]
name = "tailor_gui"
version = "0.2.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
publish = false
description = "Tailord GUI (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
futures = "0.3.28"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.17.1"
relm4-components = { version = "0.6.0" }
relm4 = { version = "0.6.0", features = ["libadwaita", "gnome_44"] }
tailor_api = "0.2.1"
tailor_client = "0.2.1"
tokio = { version = "1.27", features = ["parking_lot"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracker = "0.2"
relm4-icons = { version = "0.6.0", features = ["plus", "settings", "speedometer", "menu-large", "up", "down", "color", "cross-filled", "data-bar-vertical-ascending-filled"] }
