[package]
name = "tailor_gui"
version = "0.2.5"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
edition = "2021"
publish = false
description = "Tailord GUI (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.19.0"
relm4-components = "0.8.1"
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_45"] }
tailor_api = { version = "0.2.5", path = "../tailor_api" }
tailor_client = { version = "0.2.5", path = "../tailor_client" }
tokio = { version = "1.38", features = ["parking_lot"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracker = "0.2"
relm4-icons = "0.8.3"
clap = { version = "4.5.7", features = ["derive"] }
