[package]
name = "tux-tailord"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "3", default-features = false, features = ["tokio"] }

serde_json = "1"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-uring = "0.4"
console-subscriber = "0.1"
futures-lite = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tuxedo_sysfs = { path = "../tuxedo_sysfs" }
tuxedo_ioctl = { path = "../tuxedo_ioctl" }
tailor_api = { path = "../tailor_api" }

signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3"
serde = "1.0"
serde_derive = "1.0"
futures = "0.3.24"
