[package]
name = "tailord"
description = "Daemon handling fan, keyboard and general HW support for Tuxedo laptops (part of tuxedo-rs)"
version = "0.3.0"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3"
futures-lite = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-uring = "0.5"
tokio = { version = "1", features = ["time", "fs", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

tailor_api = { path = "../tailor_api" }
tuxedo_ioctl = { path = "../tuxedo_ioctl" }
tuxedo_sysfs = { path = "../tuxedo_sysfs" }
once_cell = "1.20.2"
