[package]
name = "tuxedo_fancontrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuxedo_ioctl = { path = "../tuxedo_ioctl" }
signal-hook = "0.3.14"
sudo = "0.6"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
