[package]
name = "tuxedo_ioctl"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.24.1", features = ["ioctl"] }
thiserror = "1"

[dev-dependencies]
sudo = "0.6"