[package]
name = "tuxedo_ioctl"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0+"
description = "Tuxedo ioctl interface (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
nix = { version = "0.26", features = ["ioctl"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
sudo = "0.6"
