[package]
name = "tuxedo_ioctl"
description = "Tuxedo ioctl interface (part of tuxedo-rs)"
version = "0.2.5"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nix = { version = "0.28", features = ["ioctl"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
sudo = "0.6"
