[package]
name = "tuxedo_sysfs"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.2.0"
edition = "2021"
license = "GPL-2.0+"
description = "Tuxedo sysfs interface (part of tuxedo-rs)"
repository = "https://github.com/AaronErhardt/tuxedo-rs"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["time", "fs"] }
tokio-uring = "0.4"
tracing = "0.1"

tailor_api = { version = "0.2", path = "../tailor_api" }

[dev-dependencies]
sudo = "0.6"
tracing-subscriber = "0.3.16"