[package]
name = "tuxedo_sysfs"
description = "Tuxedo sysfs interface (part of tuxedo-rs)"
version = "0.2.4"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["time", "fs"] }
tokio-uring = "0.4"
tracing = "0.1"

tailor_api = { version = "0.2.4", path = "../tailor_api" }

[dev-dependencies]
sudo = "0.6"
tracing-subscriber = "0.3.16"
